--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "HBWABot Mizo",
-  "description": "whatsapp md bot build with nodejs",
+  "name": "Nozy-md",
+  "description": "Simple WhatsApp bot",
   "repository": "https://github.com/HBMods-OFC/HBWABot-Mz",
   "logo": "https://i.imgur.com/Csx7R8J.jpg",
   "keywords": ["nodejs", "bot", "gpt", "hbwabot", "multi device"],
